<resources>
    <string name="app_name">ST10082074-TridentTimeTracker</string>
    <string name="login">Log In</string>
    <string name="reg">Register</string>
    <string name="AppNameTTT">Trident Time Tracker</string>
    <string name="icon">Trident_Icon</string>
    <string name="Back">Back</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_calculations">Calculations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task_title">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_name_hint">Enter task name</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter description</string>
    <string name="project_name">Project Name</string>
    <string name="project_name_hint">Enter project name</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_hint">Select start date</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_hint">Select start time</string>
    <string name="end_time">End Time</string>
    <string name="end_time_hint">Select end time</string>
    <string name="add_task">Add Task</string>
    <string name="add_project_title">Add Project</string>
    <string name="client">Client</string>
    <string name="client_hint">Enter client name</string>
    <string name="end_date">End Date</string>
    <string name="end_date_hint">Select end date</string>
    <string name="add_project">Add Project</string>
</resources>