<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/trident_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/AppNameTTT"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:fontFamily="@font/archivo_black"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:fontFamily="@font/archivo_black"
        android:text="@string/reg"
        android:textColor="#FFFFFF" />

</RelativeLayout>

